fixed the padding top on mobile on the findpagea

--- a/src/findpage.scss
+++ b/src/findpage.scss
@@ -27,8 +27,9 @@ $subtle-black: #1a1a1a;
   max-width: calc(100vw - 260px);
   box-sizing: border-box;
   margin-left: 0;
+  margin-right: 100px;
   overflow: hidden;
-  padding-top: 1%;
+  padding-top: 0;
 }
 
 // Remove the blanket margin-left that was pushing everything right
@@ -468,7 +469,6 @@ $subtle-black: #1a1a1a;
     padding: 0;
     margin: 0;
     overflow-x: hidden;
-    padding-top: 20%;
   }
 
   .find-page-container > * {
